--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <marquee behavior="" direction="" class="ft-grande">Olá Mundo</marquee>
+    <main class="regiao">
+      <marquee behavior="" direction="" class="ft-grande">Olá Mundo</marquee>
+    </main>
+
+    <footer class="footer">
+      <p>
+        <a target="blank" href="https://github.com/huogerac/d2.4-pag-pessoal"
+          >código fonte</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
